--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,26 +2,108 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.boxx {
+  box-sizing: border-box;
+  box-shadow: 0px 20px 50px black;
+}
+.box:hover {
+  box-sizing: border-box;
+  box-shadow: 0 10px 30px black;
+}
+.hdg {
+  font-size: 50px;
+  font-weight: 700;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.phdg {
+  font-size: 30px;
+  font-weight: 600;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.shdg {
+  font-size: 20px;
+}
+
+.pos {
+  position: absolute;
+}
+
+.round {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 50% 20%/ 10% 40%;
+  transition: 0.3s ease-in-out 0ms;
+}
+
+.round:hover {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20% 50%/ 40% 10%;
+  transition: 0.3s ease-in-out 0ms;
+}
+.bradius {
+  border-radius: 100px;
+}
+
+.change_button {
+  color: black !important;
+  transition: 0.3s ease-in-out 0ms;
+}
+
+.change_button:hover {
+  transition: 0.3s ease-in-out 0ms;
+  background-color: rgb(0, 0, 0) !important;
+  color: white !important;
+  transform: translateY(-40px);
+}
+
+.btn {
+  box-sizing: border-box;
+}
+
+.btn:hover {
+  transform: translateX(12px) scale(1.2);
+  transition: 0.5s ease-in-out 0ms;
+}
+
+.gridd {
+  display: grid;
+  grid-template-columns: 1fr 1fr 0.5fr 0.5fr 1fr;
+}
+
+.gride {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.gridee {
+  display: grid;
+  grid-template-columns: 0.5fr 2fr;
+}
+
+input,
+textarea {
+  @apply border-2 border-yellow-400 rounded-md p-1 w-full text-black;
+}
+
+label {
+  @apply text-black;
+}
+
+table.basic {
+  @apply w-full text-black;
+}
+
+table.basic thead tr td {
+  @apply border border-2 bg-yellow-400;
+}
+
+table.basic tr td {
+  @apply border border-2 pl-2;
+}
+
+table.basic a {
+  @apply px-1 inline-flex rounded-md;
 }
