--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+.change {
+  color: black;
+  transition: 0.3s ease-in-out 0ms;
+}
+
+.change:hover {
+  transition: 0.3s ease-in-out 0ms;
+  background-color: rgb(0, 0, 0) !important;
+  color: white !important;
+}
+
 .boxx {
   box-sizing: border-box;
   box-shadow: 0px 20px 50px black;
